--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n"
+    "address = \"art.vandelay@vandelay.co\"\n",
+    "\n"
    ]
   },
   {
