--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    ],
    "source": [
     "address = \"art.vandelay@vandelay.co\"\n",
-    "\n",
+    "address.endswith()\n",
     "\n"
    ]
   },
