Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "address = 'vandelay.com'\n",
+    "adress.append(\"www.\")"
    ]
   },
   {
