Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
    ],
    "source": [
     "address = \"vandelay.com\"\n",
-    "address.append(\"www.\")\n",
+    "address.append(\"www.\"\n",
     "print(address)\n"
    ]
   },
