Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,9 @@
     }
    ],
    "source": [
-    "address = \"vandelay.com'\n"
+    "address = \"vandelay.com\"\n",
+    "prefix = \"www.\"\n",
+    "print(prefix + addf)\n"
    ]
   },
   {
